--- a/MySite.html
+++ b/MySite.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <link rel="stylesheet" href="MySite.css">
   <title>Document</title>
 </head>
@@ -18,10 +17,10 @@
       </div>
       <nav>
         <ul class="nav">
-          <li class="nav-list"><a href="#portfolio">portfolio</a></li>
-          <li class="nav-list"><a href="#feature">feature</a></li>
-          <li class="nav-list"><a href="#profile">profile</a></li>
-          <li class="nav-list"><a href="#content">content</a></li>
+          <li class="nav-list"><a href="#portfolio">Portfolio</a></li>
+          <li class="nav-list"><a href="#feature">Feature</a></li>
+          <li class="nav-list"><a href="#profile">Profile</a></li>
+          <li class="nav-list"><a href="#content">Content</a></li>
         </ul>
       </nav>
     </div>
@@ -36,7 +35,7 @@
 
   <section id="portfolio">
     <div class="container">
-      <h2 class="heading">portfolio</h2>
+      <h2 class="heading">Portfolio</h2>
       <p class="heading-text">it is a long established fact that a reader will be distracted by the readable
         <br> content of a page when looking at its layout.
         <br class="sp-none"> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
@@ -63,8 +62,19 @@
         <div class="strength">
           <i class="fa fa-code" aria-hidden="true"></i>
           <h3 class="strength-title">Strength1</h3>
-          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur      </div>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur      </p>
         </div>
+        <div class="strength">
+          <i class="fa fa-desktop" aria-hidden="true"></i>
+          <h3 class="strength-title">Strength2</h3>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur      </p>
+        </div>
+        <div class="strength">
+          <i class="fa fa-cong" aria-hidden="true"></i>
+          <h3 class="strength-title">Strength3</h3>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur      </p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -91,22 +101,31 @@
 
   <section id="contacts">
     <div class="container">
-      <div class="heading">
-        <h2 class="heading-text">Contact</h2>
+        <h2 class="heading">Contact</h2>
         <p class="heading-text">It is a long established fact that a reader will be distracted by the readable
           <br> content of a page when looking at its layout.
           <br class="sp-none"> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
         </p>
-        <div class="left-content">
-          <div class="left-contact-content">
-            <div class="right-content">
-              <div class="right-contact-content">
-                <h3 class="discription-title">SNS</h3>
-                <i class="fa fa-facebook fa-5x"></i>
-                <i class="fa fa-twitter fa-5x"></i>
-                <i class="fa fa-instagram fa-5"></i>
-              </div>
+        <div class="contact-group clearfix">
+          <div class="left-content">
+            <div class="left-contact-content">
+              <h3 class="discription-title">Mail</h3>
+              <a class="discription-text link-text" href="mailto:xxx&#64;xxx.com">xxx&#64;xxx.com</a>
+              <h3 class="discription-title">Tel</h3>
+              <a class="discription-text link-text" href="tel:00000000000">000-0000-0000</a>
             </div>
+          </div>
+
+          <div class="right-content">
+            <div class="right-contact-content">
+              <h3 class="discription-title">SNS</h3>
+              <i class="fa fa-facebook fa-5x" area-hidden="true"></i>
+              <i class="fa fa-twitter fa-5x" area-hidden="true"></i>
+              <i class="fa fa-instagram fa-5x" area-hidden="true"></i>
+            </div>
+          </div>
+        </div>
+
           </div>
         </div>
       </div>
@@ -116,5 +135,8 @@
   <footer>
   <p class="copyright">©2017 copyright</p>
   </footer>
+  <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
+  <script src="https://use.fontawesome.com/2fd86bc506.js"></script>
+
 </body>
 </html>
